# data-engineering-camp

./: .gitignore  script.py
pipeline/: Dockerfile  docker_compose.yaml  import_zones.py  ingest_data.py  load_zones.py  pipeline.py  pyproject.toml  real_ingest_data.py.ipynb
pipeline/output/: 12.parquet
